--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "svg.select.js": "2.1.1"
   },
   "devDependencies": {
+    "deepmerge": "1.3.2",
     "tslint": "4.5.1",
     "typescript": "2.2.2"
   }
