--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,6 +7,7 @@
     "noLib": false,
     "preserveConstEnums": true,
     "declaration": true,
+    "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true,
     "outDir": "../lib"
   },
