--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "svgboard",
+  "name": "svg.board.js",
   "version": "1.0.0",
   "description": "SVG Drawing Board library",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "author": "GuskiS",
   "license": "MIT",
   "scripts": {
-    "build": "tsc -w -p src/"
+    "build": "rimraf dist && tsc -w -p src/"
   },
   "dependencies": {
     "svg.draggable.js": "2.2.1",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@types/deepmerge": "1.3.1",
     "deepmerge": "1.3.2",
+    "rimraf": "2.6.1",
     "tslint": "4.5.1",
     "typescript": "2.2.2"
   }
